# meridian

./: DEPLOY.md  LICENSE  Makefile  README.md
backend/: .gitignore  Dockerfile  assets.db  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/handler/: ai.go  ai_agent.go  assets_io.go  audit.go  auth.go  handlers.go  k8s.go  sftp.go  uptime.go  users.go
backend/internal/model/: models.go
backend/internal/monitor/: monitor.go
backend/internal/notifier/: notifier.go
backend/internal/scanner/: engine.go  ip_range.go  ip_range_test.go  nuclei.go  scanner.go
backend/internal/scheduler/: scheduler.go
backend/internal/sshproxy/: local.go  localpty_unix.go  localpty_windows.go  sshproxy.go  telnet.go
backend/internal/store/: db.go
deploy/: nginx.conf
docs/: api_spec.md  architecture.md  design_plan.md  desktop.md
docs/plans/: 2026-06-25-k8s-cluster-management.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  clipboard.ts  commandSnippets.ts  index.css  main.tsx  terminalSessions.tsx  theme.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/components/: CommandPalette.tsx  GlobalSearch.tsx  Logo.tsx  PageHeader.tsx  QuickConnect.tsx  SftpDrawer.tsx  ShortcutHelp.tsx  TerminalAIPanel.tsx  TerminalModal.tsx  TerminalTabBar.tsx  UserMenu.tsx
frontend/src/pages/: Assets.tsx  Audit.tsx  Login.tsx  (+9 more)
scripts/: build-desktop.ps1  make-dmg.sh
(+1 files in other folders)
